2007-01-08  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Fix for Solaris build.
	
2006-12-15  Albert Chu  <chu11@llnl.gov>

	* tagged gendersllnl-1-6-2

2006-09-12  Albert Chu  <chu11@llnl.gov>

	* dist/dist_cmp (printit): Output ranged string with brackets
	rather than without.
	
2006-08-01  Albert Chu  <chu11@llnl.gov>

	* src/Libgendersllnl/Makefile.am: Fix file include bug.
	
2006-07-17  Albert Chu  <chu11@llnl.gov>

	Changes to make perl extensions build correctly on FC5.

	* config/ac_perl_install_destdir.m4: Removed file.

	* config/ac_perl_destdir.m4: New file.

	* configure.ac: Adjust to use new macro.

	* genders.spec.in: Adjust to use new configure option.

	* src/Libgendersllnl/Makefile.am: Adjust makemaker flags
	  appropriately.
	
2006-07-03  Albert Chu  <chu11@llnl.gov>

	* man/genders_getaltnodes.3: Fix typo.
	
2006-03-26  Albert Chu  <chu11@llnl.gov>

	* dist/dist_all: Add -f option from John Westlund's (westlund2 at
	llnl dot gov) patch.
	
2006-03-24  Albert Chu  <chu11@llnl.gov>

        * configure.ac: Remove AC_FUNC_MALLOC check for portability to
        AIX (from Py Watson, watson30 at llnl dot gov).
	
2005-08-18  Albert Chu  <chu11@llnl.gov>

	* tagged gendersllnl-1-6-1
	
2005-08-03  Albert Chu  <chu11@llnl.gov>

	* dist/dist2: Added -P option.

	* man/dist/dist2.1: Added -P option and cleaned up some wording.
	
	* NEWS: Updated with -P option information.

	* META: Updated release.

	* tagged gendersllnl-1-6-0-pre5
	
2005-07-08  Albert Chu  <chu11@llnl.gov>

	* NEWS: Updated for future release of gendersllnl-1.6-1.
	
2005-07-08  Albert Chu  <chu11@llnl.gov>

	* META: Updated release.

	* tagged gendersllnl-1-6-0-pre4
	
2005-07-05  Albert Chu  <chu11@llnl.gov>

	* compat/Hostlist.pm (expand_quadrics_range): Apply patch by Py
	Watson (watson30@llnl.gov) to fix Hostlist expansion corner cases.
	
2005-06-02  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/gendersllnl.h: Fix comment typo.
